--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body{
     margin: 0;
     font-family: Poppins;
+
 }
+
+.navbar{
+    background-color: #024dbd;
+    width: 100%;
+    height: 120px;
+}
+
 .container{
     width: 900px;
-    margin: auto;
     max-width: 90vw;
     text-align: center;
     padding-top: 10px;
@@ -15,7 +22,7 @@ svg{
 }
 header{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 20px 0;
 }
@@ -24,7 +31,7 @@ header{
 }
 .iconeCarrinho span{
     position: absolute;
-    background-color: red;
+    background-color: rgb(0, 50, 212);
     width: 30px;
     height: 30px;
     display: flex;
@@ -36,28 +43,32 @@ header{
     right: -20px;
 }
 .titulo{
-    font-size: xx-large;
+    font-size: 25px;
 }
 .listaProdutos .item img{
-    width: 90%;
-    filter: drop-shadow(0 50px 20px #0009);
+    height: 0;
+    width: 0;
 }
+
 .listaProdutos{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
+
 .listaProdutos .item{
     background-color: #EEEEE6;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 10px;
+    height: 220px;
+    width: 250px;
 }
+
 .listaProdutos .item h2{
     font-weight: 500;
     font-size: large;
 }
 .listaProdutos .item .preco{
-    letter-spacing: 7px;
     font-size: small;
 }
 .listaProdutos .item button{
@@ -68,7 +79,6 @@ header{
     margin-top: 10px;
     border-radius: 20px;
 }
-
 /* cart */
 .tabelaCarrinho{
     width: 400px;
@@ -152,4 +162,14 @@ body.mostrarCarrinho .container{
     .listaProdutos{
         grid-template-columns: repeat(2, 1fr);
     }
+}
+
+.navbar{
+    background-color: #024dbd;
+    width: 100%;
+    height: 130px;
+}
+
+.navbar img{
+background-color: #fff;
 }
