--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'DM Sans';
+    transition: all 0.3s ease-in-out; /* Adiciona transição suave para todos os elementos */
 }
-body{
+
+body {
     margin: 0;
     font-family: Poppins;
-
-
+    background-color: #EEE; /* Cor de fundo clara */
+    color: #333; /* Cor do texto clara */
 }
-.navbar{              
+
+body.dark-mode {
+    background-color: #ff0000; /* Cor de fundo escura */
+    color: #ffffff; /* Cor do texto clara */
+}
+body.dark-mode a {
+    background-color: #ff0000; /* Cor de fundo escura */
+    color: #ffffff; /* Cor do texto clara */
+}
+
+
+.navbar {              
     display: flex;
     align-items: center;
     width: 100%;
@@ -24,28 +36,32 @@ body{
     z-index: 100;
     
 }
-#navbar.rolagem{
+
+#navbar.rolagem {
     background-color: #003686;
     
 }
 
-#navbar.rolagem a{
-    color:rgb(255, 255, 255);
+#navbar.rolagem a {
+    color: rgb(255, 255, 255);
     }
-    #navbar.rolagem span{
-        color:rgb(255, 255, 255);
+
+    #navbar.rolagem span {
+        color: rgb(255, 255, 255);
         }
-        #navbar.rolagem svg{
-            color:rgb(255, 255, 255);
+
+        #navbar.rolagem svg {
+            color: rgb(255, 255, 255);
             }
-.navbar img{
+
+.navbar img {
     background-color: transparent;
     margin-top: 16px;
     margin-left: 90px;
     width: 160px;
     height: 50px;  
 }
-.banner{
+.banner {
 height: 100vh;
 background-image: url(imagem/fundoInic.png);
 background-position: center;
@@ -55,30 +71,39 @@ top: 0;
 left: 0;
 
 }
-.navbar .topicos{
+
+.navbar .topicos {
     width: 60%;
     margin-left: 7.5%;
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
-    color: rgb(0, 24, 80);
+    color: #ffffff;
     font-size: 23px;
 }
-.navbar .topicos :hover{
-color: rgb(255, 255, 255);
-cursor: pointer;
-opacity: 0.5;
-transform: scale(1.5);
-transition: 0.5s ease;
+
+
+/* Adicionando modo escuro */
+.navbar.dark-mode .topicos {
+    color: #eee; /*  Define a cor do texto */ 
+}
+
+.navbar.dark-mode img {
+    /* Ajuste as cores da imagem se necessário */ 
+}
+
+.topicos a:hover {
+    color: #333;  
 }
 .container{
     text-align: center;
     padding-top: 10px;
     transition: transform .5s;
 }
+
 svg{
     width: 30px;
-    color: rgb(0, 24, 80);;
+    color: #ffffff;
 }
 header{
     display: flex;
@@ -92,24 +117,28 @@ header{
 }
 .iconeCarrinho span{
     position: absolute;
-
     width: 30px;
     height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    color: rgb(0, 24, 80);;
-    top: 50%;
+    color: rgb(255, 255, 255);;
+    top: 70%;
     right: -20px;
    
 }
 .titulo{
-    font-size: 30px;
-    background-color: rgb(0, 217, 255);
+    font-size: 3vw;
+    margin-bottom: 10%;
     border-radius: 15px;
-    color: white;
-    width: 250px;
+    margin-block:5%;
+    color: #00196A;
+    width: 50vw;
+    
+}
+.titulo.dark-mode {
+  color: #eee; /* Define a cor do título no modo escuro */
 }
 
 .listaProdutos{
@@ -135,10 +164,17 @@ header{
 
 
 .listaProdutos .item{
-    background-color: #EEEEE6;
-    border-radius: 10px;
+    background-color: #50c8ff13;
+    border: solid #00196A 1px;
+    border-radius: 5px;
     height: 35vh;
     width: 15vw;
+}
+.listaProdutos .item:hover{
+    transform: scale(1.021);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
+
 }
 
 
@@ -147,19 +183,32 @@ header{
     font-size: large;
 }
 .listaProdutos .item .preco{
-    font-size: small;
+    font-size: medium;
 }
 .listaProdutos .item button{
-    background-color: #353432;
+    background-color: #00196A;
     color: #eee;
     border: none;
     padding: 5px 10px;
     margin-top: 10px;
-    border-radius: 20px;
+    border-radius: 5px;
+
 }
 
+.listaProdutos .item button:hover{
+    cursor: pointer;
+    border: solid #00196A 1px;
+    background-color: #eee;
+    color: #00196A;
 
+}
+.listaProdutos .item h2.dark-mode{
+    color: #fff;
+}
 
+.listaProdutos .item .preco.dark-mode{
+    color: #eee;
+}
 
 /* cart */
 .tabelaCarrinho{
@@ -178,6 +227,12 @@ header{
     
     
 }
+
+.tabelaCarrinho.dark-mode{
+    background-color: #333; /* Cor de fundo escura */
+    color: #eee; /* Cor do texto clara */ 
+}
+
 body.mostrarCarrinho .tabelaCarrinho{
     right: 0; 
 
@@ -203,6 +258,10 @@ body.mostrarCarrinho .container{
     margin-left: 10%;
 }
 
+.linha.dark-mode{
+    background-color: #eee;
+}
+
 
 .tabelaCarrinho h3{
     font-size: 23px;
@@ -210,10 +269,25 @@ body.mostrarCarrinho .container{
     margin-bottom: 30px;
     font-weight: 300;
 }
+#totalCarrinho{
+    margin-top: -8%;
+    margin-left: 200px;
+}
 
 .tabelaCarrinho .close{
     background-color: #eee;
 }
+
+.tabelaCarrinho .btn button.dark-mode{ 
+    background-color: #eee;
+    color: #00196A; 
+}
+
+.tabelaCarrinho .btn button.dark-mode:hover{ 
+    background-color: #00196A; 
+    color: #eee;
+}
+
 .listaCarrinho .item img{
     width: 100%;
 }
@@ -223,6 +297,10 @@ body.mostrarCarrinho .container{
     gap: 10px;
     text-align: center;
     align-items: center;
+}
+ #a{
+   text-decoration: none;
+   color: black;
 }
 .listaCarrinho .quantidade span{
     display: inline-block;
@@ -272,13 +350,18 @@ body.mostrarCarrinho .container{
 footer{
     height: 500px;
     width: 100%;
-    background-color: #003686;
+    background-color: #003686; /*  Azul Escuro */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 180px;
 }
+footer.dark-mode{ 
+    background-color: #00196A; /* Cor de fundo escuro */
+    color: #eee; /* Cor do texto claro */ 
+}
+
 .rodape{
     display: flex;
     justify-content: center;
@@ -291,14 +374,19 @@ footer{
     height: 150px;
     width: 90%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     margin: 5px 0;
+    gap: 100px;
     
 }
+#certificados{
+
+}
+
 #certificado{
-    height: 120px;
-    width: 240px;
+    height: 80px;
+    width: 160px;
     border: solid 2px black;
     border-radius: 10px;
 }
@@ -390,7 +478,7 @@ button img{
     width: 10vw;
     height: 10vw;
 }
-.redes-socias{
+.redes-sociais{
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -404,15 +492,8 @@ button img{
     width: 85px;
 }
 
+/*--------------------------------------*/
 
-.nome{
-    padding: 5px;
-    background-color: transparent;
-    border-top:solid #00196A 1px;
-    border-bottom:solid #00196A 1px;
-    border-left: solid transparent;
-    border-right: solid transparent;
-}
 
 .tabelaCarrinho button{
     background-color: #ffffff;
@@ -432,7 +513,7 @@ button img{
     
 }
 
-section.slider{
+section.slider1{
     margin: 0 auto;
     width: 100%;
     height: auto;
@@ -470,6 +551,56 @@ background-size: contain;
     display: flex;
     justify-content: center;
 }
+
+.nav-manual .manual-btn, .nav-auto div{
+    border: 1px solid #ffffff;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.nav-manual .manual-btn:not(:last-child), .nav-auto div:not(:last-child){
+    margin-right: 10px;
+}
+
+.nav-manual .manual-btn:hover{
+    background-color: #0031d1;
+}
+
+#radio1:checked ~ .nav-auto .auto-btn1, #radio2:checked ~ .nav-auto .auto-btn2, #radio3:checked ~ .nav-auto .auto-btn3{
+    background-color: #00196A;
+
+}
+
+
+#radio1:checked ~ .primeiro{
+    margin-left: 0%;
+}
+
+#radio2:checked ~ .primeiro{
+    margin-left: -25%;
+}
+
+#radio3:checked ~ .primeiro{
+    margin-left: -50%;
+}
+
+@media screen and (max-width: 900px) {
+    .img-desktop{
+        display: none;
+    }
+
+    .nav-auto, .nav-manual{
+        margin-top: 60%;
+    }
+}
+
+
+/*********************SCROLL*******************************************************************/
+
+
+
 /*
 
              ..                     .''.
@@ -493,53 +624,245 @@ __,,--.--                                '
                        ''--..,--''     Pr59
 
 */
+/*****************************SCROLL*********************************/
 
-.nav-manual .manual-btn, .nav-auto div{
-    border: 1px solid #00196A;
-    padding: 10px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: 0.2s;
+
+.item-link, .preco, .addCarrinho{
+
+visibility: hidden;
+
 }
 
-.nav-manual .manual-btn:not(:last-child), .nav-auto div:not(:last-child){
+/****************************************************************************/
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+    z-index: 100;
+    position: fixed;
+    right: 25px;
+    top: 30px;
+  }
+  
+  .theme-switch-wrapper span {
     margin-right: 10px;
+    font-size: 1rem;
+  }
+  
+  .toggle-text {
+    position: relative;
+    top: -4px;
+    right: 5px;
+    color: var(--on-background);
+  }
+  
+  .theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+  }
+  
+  .theme-switch input {
+    display: none;
+  }
+  
+  .slider {
+    background: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: 0.4s;
+  }
+  
+  .slider::before {
+    background: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: 0.4s;
+    width: 26px;
+  }
+  
+  input:checked + .slider {
+    background: var(--primary-color);
+  }
+  
+  input:checked + .slider::before {
+    transform: translateX(26px);
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round::before {
+    border-radius: 50%;
+  }
+  
+  .fas {
+    font-size: 30px;
+    margin-right: 5px;
+  }
+  
+
+  /* modo escuro */
+
+body.dark-mode .navbar{
+    background-color: #000; /* Fundo escuro da navbar */ 
 }
 
-.nav-manual .manual-btn:hover{
-    background-color: #00196A;
+body.dark-mode .navbar img{ 
+    filter: invert(1); /* Inverte a cor da imagem  */
 }
 
-#radio1:checked ~ .nav-auto .auto-btn1, #radio2:checked ~ .nav-auto .auto-btn2, #radio3:checked ~ .nav-auto .auto-btn3{
-    background-color: #00196A;
-
+body.dark-mode .topicos{ 
+    color: #eee; /* Define a cor do texto  */
 }
 
-#radio1:checked ~ .primeiro{
-    margin-left: 0%;
+body.dark-mode .iconeCarrinho svg{ 
+    stroke: white; 
+} 
+
+body.dark-mode .listaProdutos .item { 
+    background-color: #000;  
+    border: solid #eee 1px; /* Cor da borda do tema escuro  */ 
 }
 
-#radio2:checked ~ .primeiro{
-    margin-left: -25%;
+body.dark-mode .listaProdutos .item h2 { 
+    color: #eee;  /* Cor do texto do produto no tema escuro */
 }
 
-#radio3:checked ~ .primeiro{
-    margin-left: -50%;
+body.dark-mode .listaProdutos .item .preco{
+    color: #eee; 
+} 
+
+body.dark-mode .listaProdutos .item button{ 
+    background-color: #eee;  /* Fundo do botão do tema escuro */
+    color: #000;  /* Cor do texto do botão do tema escuro */
 }
 
-@media screen and (max-width: 900px) {
-    .img-desktop{
-        display: none;
-    }
+body.dark-mode .listaProdutos .item button:hover{
+    background-color: #eee;
+    color: #000;  /* Fundo do botão do tema escuro */
+    color: #000; /* Cor do texto do botão do tema escuro */
+    border: none;  
+}
 
-    .img-mobile{
-        display: block;
-    }
+body.dark-mode .tabelaCarrinho{
+    background-color: #000; /*  Cor de fundo do carrinho */
+    color: #eee;  /*  Cor do texto  */ 
+}
 
-    .nav-auto, .nav-manual{
-        margin-top: 60%;
-    }
+body.dark-mode .linha{
+    background-color: #eee; /* Cor da linha do carrinho  */ 
+}
+
+body.dark-mode .tabelaCarrinho button{
+    background-color: #333; 
+    color: #eee; 
+} 
+
+body.dark-mode .tabelaCarrinho button:hover {
+    background-color: #eee;
+    color: #000; 
 }
 
 
+body.dark-mode .listaCarrinho .item{ 
+    background-color: #000;  /* Fundo do item do carrinho */
+}
 
+body.dark-mode .listaCarrinho .quantidade span:hover{ 
+    color: #000;
+    background-color: #eee;
+}
+
+body.dark-mode .listaCarrinho .quantidade span {
+    color: #eee; /*  Cor do texto do botão do tema escuro */ 
+}
+
+body.dark-mode footer { 
+    background-color: #222;  /*  Fundo escuro do  footer  */ 
+} 
+/*  Outras classes que precisam de mudanças no modo  escuro */
+
+body.dark-mode .rodape-cima, body.dark-mode .rodape-baixo { 
+    color: #eee;  
+}
+ 
+body.dark-mode .copyright {
+    color: #eee;  
+}
+
+/*  ...  adicionando  estilos  */
+
+body.dark-mode .navbar .topicos a:hover{
+    color: #eee; 
+}
+
+body.dark-mode .nav-manual .manual-btn, 
+body.dark-mode .nav-auto div {
+    border: 1px solid #eee; 
+}
+
+body.dark-mode .nav-manual .manual-btn:hover {
+    background-color: #4d76ff; 
+}
+
+body.dark-mode #radio1:checked ~ .nav-auto .auto-btn1,
+body.dark-mode #radio2:checked ~ .nav-auto .auto-btn2,
+body.dark-mode #radio3:checked ~ .nav-auto .auto-btn3 {
+    background-color: #4d76ff; /*  A cor não deve mudar, é  o   mesmo   azul  */ 
+} 
+
+/*  Estilos do Switch */
+
+body.dark-mode .theme-switch-wrapper span {
+    background-color: #eee; 
+}
+
+body.dark-mode .theme-switch-wrapper label {
+    color: #eee;  /* Cor do label no modo escuro  */ 
+}
+
+body.dark-mode .theme-switch {
+    background: #333; 
+}
+
+body.dark-mode .slider {
+    background: #eee;
+} 
+
+body.dark-mode .slider::before {
+    background: #000;
+}
+
+body.dark-mode .rodape-cima, body.dark-mode .rodape-baixo {
+    color: #eee; 
+}
+
+
+.email input { 
+    background-color: #eee;
+}
+
+.email button { 
+    color: #000;
+    background-color: #eee; 
+}
+
+.input-email button{ 
+    background-color: #008CBA;  
+    color: #FFF;
+}
+
+/* Ajustando os certificados */
+
+body.dark-mode #certificado{ 
+  border-color: #eee; /*  Cor da borda para o tema escuro  */
+}
