--- a/paginaProd.css
+++ b/paginaProd.css
@@ -1,18 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'DM Sans';
+    transition: all 0.3s ease-in-out; 
 }
-body{
+
+body {
     margin: 0;
-    font-family: Poppins;
-
-
+    font-family: 'DM Sans';
+    background-color: #EEE;
+    color: #333; 
 }
-.navbar{              
+.navbar {              
     display: flex;
     align-items: center;
     width: 100%;
@@ -22,25 +23,45 @@ body{
     left: 0;
     transition: .5s;
     z-index: 100;
-    background-color: rgb(0, 44, 161);
-
-}
-#navbar.rolagem{
-background-color:rgba(0, 9, 134, 0.548);
+    background-color: #003686;
 }
 
-#navbar.rolagem a{
-    color:rgb(255, 255, 255);
+#navbar.rolagem {
+    background-color: #003686;
+    
+}
+
+#navbar.rolagem a {
+    color: rgb(255, 255, 255);
     }
-.navbar img{
+
+    #navbar.rolagem span {
+        color: rgb(255, 255, 255);
+        }
+
+        #navbar.rolagem svg {
+            color: rgb(255, 255, 255);
+            }
+
+.navbar img {
     background-color: transparent;
     margin-top: 16px;
     margin-left: 90px;
     width: 160px;
     height: 50px;  
 }
+.banner {
+height: 100vh;
+background-image: url(imagem/fundoInic.png);
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+top: 0;
+left: 0;
 
-.navbar .topicos{
+}
+
+.navbar .topicos {
     width: 60%;
     margin-left: 7.5%;
     display: flex;
@@ -49,17 +70,50 @@ background-color:rgba(0, 9, 134, 0.548);
     color: #ffffff;
     font-size: 23px;
 }
-.navbar .topicos :hover{
-color: rgb(255, 255, 255);
-cursor: pointer;
-opacity: 0.5;
-transform: scale(1.5);
-transition: 0.5s ease;
+.topicos a:hover {
+    color: #00a2ff;
+    font-size: 25px;  
 }
 .container{
     text-align: center;
     padding-top: 10px;
     transition: transform .5s;
+}
+
+svg{
+    width: 30px;
+    color: #ffffff;
+}
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+   
+}
+.iconeCarrinho{
+    position: relative;
+    cursor: pointer;
+}
+
+.iconeCarrinho :hover{
+    color: #00a2ff;
+    cursor: pointer;
+}
+
+.iconeCarrinho span{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: rgb(255, 255, 255);;
+    top: 70%;
+    right: -20px;
+    cursor: pointer;
+   
 }
 
 /*MENU DO PRODUTO OU SEI LA O NOME EU NÃO SEI*/
@@ -68,35 +122,213 @@ transition: 0.5s ease;
     margin-top: 120px;
     
 }
-.paginaDoProd{
+
+.pagProd{
     display: flex;
     justify-content: center;
     align-items: flex-start;
 }
 .imagemProd{
     border: solid black 3px;
-    height: 70vh;
-    width: 35%;
+    border-radius: 30px;
+    height: 55vh;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2.1vh;
+    background-color: #ffffff;
+}
+.imagemProd img{
+    height: 60vh;
+    width: 80%;
+}
+.infoProd{
+    
+    height: 65.6vh;
+    width: 25%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 20px;
+    padding: 2.1vh;
+}
+.infoProd p{
+    font-size: 18px;
+}
+.infoProd h1{
+    font-size: 40px;
+}
+.infoProd span{
+    font-size: 35px;
+}
+#linhaInfoPreco{
+    background-color: black;
+    height: 60vh;
+    width: 1px;
+}
+.precoBtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 75px;
+    gap: 15px;
+}
+.addCarrinho{
+    height: 50px;
+    width: 180px;
+    border-radius: 15px;
+    font-size: 16px;
+    background-color: #00196A;
+    color: white;
+}
+.addCarrinho:hover{
+    background-color: white;
+    color: black;
+}
+
+/*-----------RODAPE---------------*/
+
+
+footer{
+    height: 500px;
+    width: 100%;
+    background-color: #003686; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 180px;
+}
+
+.rodape{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 420px;
+    width: 90%;
+}
+.rodape-cima{
+    height: 150px;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 0;
+    gap: 100px;
+    
+}
+
+
+#certificado{
+    height: 80px;
+    width: 160px;
+    border: solid 2px black;
+    border-radius: 10px;
+}
+.rodape-baixo{
+    height: 300px;
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    margin-top: 15px;
+}
+.email{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+    height: 100px;
+    width: 350px;
+    margin-left: 10px;
+}
+.email h2{
+    display: flex;
+    justify-content: flex-s;
+    color: white;
+    font-size: 18px;
+    height: 18px;
+    width: 378px;
+    margin-bottom: 5px;
+}
+.input-email input{
+    height: 35px;
+    width: 300px;
+    border-radius: 8px 0 0 8px;
+    background-color: white;   
+    font-size: 17px;
+}
+.input-email button{
+    height: 39px;
+    width: 77px;
+    text-align: center;
+    border-radius: 0 8px 8px 0;
+    font-size: 15px;
+}
+.input-email{
+    display: flex;
+    justify-content: center;
+}
+
+button img{
+    height: 15px;
+    width: 15px;
+}
+
+.linha-rodape{
+    height: 2px;
+    width: 90%;
+    background-color: white;
+    margin-top: 5px;
+}
+.pagamento {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 230px;
+    width: 400px;
+    flex-direction: column;
+    gap: 10px;
+}
+#pagamento{
+    height: 80px;
+    width: 130px;
+    border-radius: 12px;
+}
+.copyright{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.rodape-copy{
+    height: 80px;
+    width: 100%;
+    background-color: #00196A;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.imagemProd img{
-    height: 60vh;
-    width: 90%;
+.listaProdutos .item img{
+    width: 10vw;
+    height: 10vw;
 }
-.infoProd{
-    
-    height: 70vh;
-    width: 30%;
-}
-.precoBtn{
-    
-    height: 40vh;
-    width: 15%;
+.redes-sociais{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
-    flex-direction: column;
-    gap: 200px;
+    flex-wrap: wrap;
+    height: 200px;
+    width: 200px;
 }
+
+#redeSocial{
+    height: 45px;
+    width: 45px;
+}
+
+/*BOTÕES DA NAVBAR*/
