--- a/paginaProd.css
+++ b/paginaProd.css
@@ -10,7 +10,7 @@
 body {
     margin: 0;
     font-family: 'DM Sans';
-    background-color: #EEE;
+    background-color: #ffffff;
     color: #333; 
 }
 .navbar {              
@@ -119,7 +119,7 @@ header{
 /*MENU DO PRODUTO OU SEI LA O NOME EU NÃO SEI*/
 
 .containerProduct{
-    margin-top: 120px;
+    margin-top: 150px;
     
 }
 
@@ -129,15 +129,15 @@ header{
     align-items: flex-start;
 }
 .imagemProd{
-    border: solid black 3px;
-    border-radius: 30px;
+    filter: drop-shadow(0 0 5px rgb(209, 209, 209));
+    border-radius: 15px;
     height: 55vh;
     width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 2.1vh;
-    background-color: #ffffff;
+    background-color: #fffafa;
 }
 .imagemProd img{
     height: 60vh;
@@ -146,7 +146,7 @@ header{
 .infoProd{
     
     height: 65.6vh;
-    width: 25%;
+    width: 28%;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -155,38 +155,36 @@ header{
     padding: 2.1vh;
 }
 .infoProd p{
-    font-size: 18px;
+    font-size: 23px;
 }
 .infoProd h1{
-    font-size: 40px;
+    font-size: 50px;
 }
 .infoProd span{
     font-size: 35px;
 }
-#linhaInfoPreco{
-    background-color: black;
-    height: 60vh;
-    width: 1px;
-}
+
 .precoBtn{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 75px;
+    margin-top: 50px;
     gap: 15px;
 }
 .addCarrinho{
     height: 50px;
     width: 180px;
-    border-radius: 15px;
+    border-radius: 10px;
     font-size: 16px;
     background-color: #00196A;
     color: white;
+    border: none;
 }
 .addCarrinho:hover{
     background-color: white;
-    color: black;
+    color: #00196A;
+    border: solid 1px #00196A;
 }
 
 /*-----------RODAPE---------------*/
@@ -240,24 +238,23 @@ footer{
 .email{
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-direction: column;
     height: 100px;
     width: 350px;
     margin-left: 10px;
+    gap: 5px;
 }
 .email h2{
-    display: flex;
-    justify-content: flex-s;
     color: white;
     font-size: 18px;
     height: 18px;
-    width: 378px;
+    width: 430px;
     margin-bottom: 5px;
 }
 .input-email input{
     height: 35px;
-    width: 300px;
+    width: 345px;
     border-radius: 8px 0 0 8px;
     background-color: white;   
     font-size: 17px;
@@ -313,22 +310,48 @@ button img{
     justify-content: center;
     align-items: center;
 }
-.listaProdutos .item img{
-    width: 10vw;
-    height: 10vw;
-}
+
 .redes-sociais{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
     height: 200px;
-    width: 200px;
+    width: 220px;
 }
 
 #redeSocial{
-    height: 45px;
-    width: 45px;
+    height: 55px;
+    width: 55px;
 }
 
 /*BOTÕES DA NAVBAR*/
+
+
+
+/*--------------------------------------------------*/
+.lupa-container {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    overflow: hidden;
+}
+
+.lupa-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.zoom-area {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    border: 2px solid #000;
+    border-radius: 50%;
+    display: none; /* Esconde até o hover */
+    overflow: hidden;
+    cursor: none; /* Remove o ponteiro do mouse */
+}
+
+.zoom-area img {
+    position: absolute;
+    width: 200%; /* Aumenta o tamanho da imagem para o efeito de zoom */
+    height: 200%;
+}
